<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.84">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/heading_grade"
            android:id="@+id/textView11"
            android:layout_below="@+id/textView10"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heading2_title"
            android:id="@+id/textView12"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_below="@+id/button4"
            android:layout_alignLeft="@+id/textView11"
            android:layout_alignStart="@+id/textView11"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/time_button"
            android:background="@drawable/roundbutton"
            android:textColor="#ffffff"
            android:id="@+id/button5"
            android:width="300dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_below="@+id/textView12"
            android:layout_alignLeft="@+id/button4"
            android:layout_alignStart="@+id/button4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_grade"
            android:id="@+id/textView10"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:textSize="30sp" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/grade_button"
            android:background="@drawable/roundbutton"
            android:id="@+id/button4"
            android:width="300dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_below="@+id/textView11"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp" />

    </RelativeLayout>

</LinearLayout>