<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jung.min.testprep.MainActivity"
    android:weightSum="1"
    android:background="#ffffff"
    android:orientation="horizontal"
    android:gravity="center_horizontal">


    <LinearLayout
        tools:context="com.jung.min.testprep.MainActivity"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="828dp"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        android:orientation="vertical"
        android:baselineAligned="false"
        android:divider="#262626">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_header"
                android:id="@+id/main_header"
                android:layout_gravity="center_horizontal"
                android:textSize="25dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold" />

            <EditText
                style="@style/EditTextCustomHolo"
                android:id="@+id/editText_Username"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:layout_gravity="center_horizontal" />

            <EditText
                style="@style/EditTextCustomHolo"
                android:id="@+id/editText_Password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="Password"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01" >

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/Button_Login"
                android:id="@+id/Button_Login"
                android:onClick="login"
                android:textStyle="normal|bold"
                android:layout_marginLeft="20dp"
                android:background="@drawable/roundbutton"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:id="@+id/button2"
                android:background="@drawable/roundbutton"
                android:onClick="clear"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textSize="20sp"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>



